<?xml version="1.0" encoding="utf-8"?>
<info.overrideandroid.connect4.view.MenuView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundmainmenu"
    tools:context="info.overrideandroid.connect4.activity.GameMenuActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/play"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:src="@drawable/four11"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/audiowide"
                android:text="@string/play_with"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/play_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/play_with_ai"
                    style="@style/RadioButtonStyle"
                    android:layout_margin="5dp"
                    android:background="@drawable/radio_btn_selector_left_corner"
                    android:text="@string/opponent_ai"
                    android:textColor="@drawable/statecolorbutton"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/play_with_friend"
                    style="@style/RadioButtonStyle"
                    android:layout_margin="5dp"
                    android:background="@drawable/radio_btn_selector_right_corner"
                    android:text="@string/opponent_player"
                    android:textColor="@drawable/statecolorbutton"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/choose_your_color"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_with" />


            <RadioGroup
                android:id="@+id/player1_disc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <RadioButton
                    android:id="@+id/disc_red"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_btn_selector_red"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/disc_yellow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/radio_btn_selector_yellow"
                    android:button="@null" />
            </RadioGroup>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/audiowide"
                android:paddingTop="0dp"
                android:text="@string/first_turn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player1_disc" />


            <RadioGroup
                android:id="@+id/first_turn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <RadioButton
                    android:id="@+id/first_turn_player1"
                    style="@style/RadioButtonStyle"
                    android:layout_margin="5dp"
                    android:background="@drawable/radio_btn_selector_left_corner"
                    android:text="@string/you"
                    android:textAllCaps="true"
                    android:textColor="@drawable/statecolorbutton"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/first_turn_player2"
                    style="@style/RadioButtonStyle"
                    android:layout_margin="5dp"
                    android:background="@drawable/radio_btn_selector_right_corner"
                    android:text="@string/opponent_ai"
                    android:textAllCaps="true"
                    android:textColor="@drawable/statecolorbutton"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </android.support.constraint.ConstraintLayout>







        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="25dp"
            app:layout_constraintGuide_percent="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.22" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.75" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="1.0" />

        <LinearLayout
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:fontFamily="@font/audiowide"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumb="@drawable/custom_thumb"
                android:progressTint="@color/white"
                android:max="2"
                android:progress="3" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/level_0"
                    android:textSize="@dimen/seekbar_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:text="@string/level_1"
                    android:textSize="@dimen/seekbar_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/level_2"
                    android:textSize="@dimen/seekbar_text_size" />
            </RelativeLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/transparent_bg_bordered_button_big"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="@dimen/play_font_size"
        android:textStyle="bold"/>
</info.overrideandroid.connect4.view.MenuView>
